ecmascript/parser/tests/test262-error-references/fail/efcb54b62e8f0e06.js.stderr
error: Declaration is now allowed
 --> $DIR/tests/test262-parser/fail/efcb54b62e8f0e06.js:1:11
  |
1 | while (1) function foo(){}
  |           ^^^^^^^^

